// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigWebpackPlugin expose should expose with hooks 1`] = `[Function]`;

exports[`ConfigWebpackPlugin expose should expose without any hooks 1`] = `[Function]`;

exports[`ConfigWebpackPlugin should be creatable 1`] = `
ConfigWebpackPlugin {
  "_hooks": Array [],
  "name": "Test",
}
`;

exports[`ConfigWebpackPlugin should be creatable with hooks 1`] = `
ConfigWebpackPlugin {
  "_hooks": Array [],
  "name": "TestSnapFull",
}
`;

exports[`ConfigWebpackPlugin webpack should modify dedicated rules depending on env 1`] = `
Object {
  "entry": "/Users/jbiasi/Projects/Namics OpenSource/webpack-config-plugins/packages/config-webpack-plugin/test/fixtures/index.ts",
  "plugins": Array [
    Object {
      "_optionsSnapshot": null,
      "name": "WebpackModify1",
      "options": undefined,
    },
  ],
}
`;
